--- a/app/assets/stylesheets/components/table.css.scss
+++ b/app/assets/stylesheets/components/table.css.scss
@@ -55,7 +55,8 @@
 }
 
 .table-resource .actions {
-  text-align: right;
+  text-align: center;
+  width: 1px;
 }
 
 tr.gu-mirror {
